# frida-gum

bindings/gumjs/: generate-runtime.py
gum/backend-posix/: gumexceptor-posix.c
gum/backend-qnx/: gummemory-qnx.c  gumprocess-qnx.c
tests/core/targetfunctions/: build.sh  meson.build
tests/gumjs/: script.c
